# finacialsim

./: .gitignore  CLAUDE.md  CUsersFabioJrgitfinacialsim.wolfmemory.md  README.md  alembic.ini  mypy.ini  prompt.md  pyproject.toml  pytest.ini  ruff.toml  skills-lock.json  skills.json
.claude/: settings.json
.github/workflows/: release.yml
.nicegui/: storage-user-8c367556-e37b-45ed-a1e3-a87ec1e25b51.json  storage-user-993050cc-e7fa-449e-bdf1-13ed6885ee31.json
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md
app/: main.py
app/core/: amortization.py  cet.py  extras.py  iof.py  money.py  price_table.py  rate_suggestions.py  validators.py
app/data/: backup.py  database.py  models.py  repositories.py
app/integrations/: base.py  factory.py  http.py
app/reports/: carne.css  carne.html  proposta.css  proposta.html
app/services/: amortization_service.py  audit_service.py  auth_service.py  backup_service.py  client_service.py  comparison_service.py  indicators_service.py  proposal_service.py  rules_service.py  scheduler.py  simulation_service.py  vehicle_service.py
app/ui/: error_handler.py  layout.py  router.py  theme.py
app/utils/: br_format.py  document_validation.py  logger.py
design-system/financialsim/: MASTER.md
design-system/kraken/: DESIGN.md
docs/: ARQUITETURA.md  INSTALACAO.md  guia_usuario.md  matematica_price.md  todo.md  troubleshooting.md
docs/prompts/: pix.md  saas.md
scripts/: build_appimage.sh  build_exe.py  build_macos.sh  finacialsim.desktop  finacialsim.spec  install_linux.sh  install_macos.sh  installer.nsi
(+128 files in other folders)
